--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Gallery</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <ul class="gallery"></ul>
     <div class="modal">
-      <span class="modal-close">times</span>
+      <span class="modal-close">X</span>
       <img class="modal-image" src="" alt="" />
       <p class="modal-description"></p>
+      <script src="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+"></script>
+      <link
+        href="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+"
+        rel="stylesheet"
+      />
     </div>
     <script src="./js/gallery.js" type="module"></script>
   </body>
